--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/Logo.png"
+              src="Logo.png"
               alt=""
               width="105"
               height="68"
@@ -47,7 +47,7 @@
           </div>
           <div class=" mt-2 me-5 w-75">
             <img
-              src="/Illustration.png"
+              src="Illustration.png"
               class="rounded ms-5 float-end w-100"
               alt="..."
             />
